Fix alignment in Arc

--- a/css/style.css
+++ b/css/style.css
@@ -31,11 +31,7 @@ body {
   margin: 0;
   padding: 0;
   animation: fadeIn 2s ease;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: flex-start;
-  min-height: 100vh;
+  display: block;
 }
 
 a {
@@ -130,6 +126,14 @@ a img:hover {
   flex-direction: row;
   align-items: center;
   justify-content: center;
+}
+
+.content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+  min-height: 100vh;
 }
 
 .width-100 {
